prepared for publishing

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,13 @@
     "description": "Processes HTML applying custom transformations",
     "type": "library",
     "license": "proprietary",
+    "authors": [
+        {
+            "name": "Kanstantsin Kulesh",
+            "email": "kk@tolkam.com",
+            "homepage": "https://www.tolkam.com"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Tolkam\\HTMLProcessor\\": "src"
@@ -10,11 +17,6 @@
     },
     "require": {
         "php": ">=7.4",
-        "tolkam/dom-manipulator": "^1.0@dev"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
+        "tolkam/dom-manipulator": "^1.0"
     }
 }
